<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="photo_progress_loaded">Photo Progress Loaded</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="clear">Clear Search</string>
    <string name="close">Close</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="new_picture_arriving">New Picture!!</string>
    <string name="new_picture_title">New Picture!!</string>
    <string name="new_picture_text">New Picture is Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_by_url">Open URL :</string>
    <string name="open_with_external_browser">Open with external browser</string>
    <string name="open_with_internal_browser">Open with in-App browser</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="setting">Setting</string>
    <string name="mnu_setting">Setting</string>
    <string name="photo_map">Photo Maps</string>
    <string name="open_in_map">Open in Maps</string>
</resources>
