<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/menu_item_search_photo"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/clear"
        android:id="@+id/menu_item_clear_search"
        app:showAsAction="never" />
    <item
        android:title="@string/refresh"
        android:id="@+id/menu_item_refresh_photo"
        app:showAsAction="never" />
    <item
        android:title="@string/start_polling"
        android:id="@+id/menu_toggle_polling"
        app:showAsAction="never" />

    <item
        android:title="@string/mnu_setting"
        android:id="@+id/menu_setting"
        app:showAsAction="never" />

</menu>